# GlyphLoom

./: .gitignore  LICENSE  README.md  glyphloom.spec  pyproject.toml
glyphloom/cli/: main.py
glyphloom/cli/commands/: draw.py  fe.py
glyphloom/data/fifth_edition/: __init__.py  fifth_edition.yaml
glyphloom/generation/: data.py  draw.py  geometry.py
