[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "glyphloom"
description = "Add your description here"
readme = "README.md"
authors = [
    { name="Trent Oberlander", email="trentoberlander@gmail.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
keywords = ["dnd", "art"]
dependencies = [
    "matplotlib",
    "numpy",
    "pyyaml",
    "rapidfuzz",
    "requests",
    "tqdm",
    "typer",
]
dynamic = ["version"]

#[tool.setuptools.package-data]
#SpellWriting = ["data/**/*.yaml"]

[tool.hatch.build]
include = ["data/**/*.yaml"]

[tool.hatch.build.targets.wheel]
packages = ["glyphloom"]

[tool.hatch.build.targets.sdist]
packages = ["glyphloom"]


[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.1"

[project.urls]
Homepage = "www.github.com/ResoluteVinculum/GlyphLoom"